docs(menu): fix bad link color on mobile
fixes #524
+ fix going back to white when arriving on footer (which is outside
white-bottom)
+ use simple color: css rule, simpler, better behavior

--- a/docs/css/_header.sass
+++ b/docs/css/_header.sass
@@ -46,5 +46,14 @@ header.site-header
       position: relative
       top: -4px
 
+header.over-white-background
+  .navbar-brand, .navbar-toggle
+    color: black !important
+
+@media (min-width: $screen-xs-max)
+  header.over-white-background
+    .navbar-nav a
+      color: black !important
+
 .main-content
   margin-top: $navbar-height
